--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "NODE_ENV=test mocha --compilers js:babel-core/register --recursive",
     "build": "babel --optional runtime -d dist/ app/",
-    "start": "node entrypoint.js"
+    "start": "node entrypoint.js",
+    "postinstall": "npm run migrate && npm run test-migrate",
+    "migrate": "knex migrate:latest",
+    "test-migrate": "NODE_ENV=test knex migrate:latest"
   },
   "repository": {
     "type": "git",
