--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mocha": "^2.4.5",
     "node-uuid": "^1.4.7",
     "rosie": "^1.3.0",
-    "sinon": "^1.17.3"
+    "sinon": "^1.17.3",
+    "supertest": "^1.2.0"
   }
 }
