--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node entrypoint.js",
     "postinstall": "npm run migrate",
     "migrate": "knex migrate:latest",
-    "test-migrate": "NODE_ENV=test knex migrate:latest"
+    "lint": "eslint app/ test/"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,8 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^6.1.0",
     "globule": "^0.2.0",
     "knex-cleaner": "^1.1.1",
     "mocha": "^2.4.5",
